<?xml version="1.0"?>
<!--
  ~ Raymond Kirk (Tunstill) Copyright (c) 2021
  ~ Email: ray.tunstill@gmail.com
-->

<package format="2">
  <name>topic_compression</name>
  <version>0.0.3</version>
  <description>
    The topic_compression package.
    Used for compressing common ROS topic messages.
  </description>

  <maintainer email="rkirk@lincoln.ac.uk">Raymond Kirk</maintainer>
  <maintainer email="ray.tunstill@gmail.com">Raymond Tunstill</maintainer>

  <url type="repository">https://github.com/RaymondKirk/topic_compression</url>
  <license>GNU GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>pybind11_catkin</build_depend>

  <!-- Core dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>pybind11_catkin</exec_depend>
</package>